# nf-tower-sdk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  nf_tower_api_library_generator_config.yml  nf_tower_openapi_schema.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pre-commit.yml  test.yml
nf_tower_sdk/: __init__.py  exceptions.py  interfaces.py  tower.py
nf_tower_sdk/clients/: __init__.py  client.py  compute_envs.py  orgs.py  pipelines.py  workflows.py  workspaces.py
nf_tower_sdk/nft/: __init__.py
nf_tower_sdk/nft/api_library/models/: access_token.py  action_tower_action_config.py  add_participant_response.py  add_team_member_response.py  agent_security_keys.py  altair_pbs_configuration.py  amazon_eks_cluster_configuration.py  analytics.py  aws_batch_configuration.py  aws_batch_configuration_forged_resources_item.py  aws_batch_platform_metainfo.py  aws_batch_platform_metainfo_fsx_file_system.py  aws_batch_platform_metainfo_job_queue.py  aws_batch_platform_metainfo_vpc.py  bit_bucket_security_keys.py  code_commit_security_keys.py  compute_env_response_dto.py  compute_platform.py  compute_region.py  create_action_request.py  create_action_response.py  create_compute_env_request.py  create_compute_env_response.py  create_credentials_request.py  create_credentials_response.py  create_dataset_response.py  create_organization_request.py  create_organization_response.py  create_pipeline_request.py  create_pipeline_response.py  create_team_request.py  create_team_response.py  create_workspace_request.py  credentials.py  credentials_provider.py  dataset_version_db_dto.py  delete_workflows_request.py  delete_workflows_response.py  describe_credentials_response.py  describe_organization_response.py  (+66 more)
src/nft/: README.md  pyproject.toml
src/nft/api_library/models/: __init__.py  abstract_grid_config.py  action_response_dto.py  action_tower_action_event.py  add_member_request.py  add_member_response.py  add_participant_request.py  avatar.py  aws_batch_configuration_forged_resources_item.py  aws_batch_platform_metainfo_bucket.py  aws_batch_platform_metainfo_efs_file_system.py  aws_batch_platform_metainfo_image.py  aws_batch_platform_metainfo_security_group.py  aws_batch_platform_metainfo_subnet.py  aws_security_keys.py  az_batch_forge_config.py  azure_batch_configuration.py  azure_security_keys.py  compute_env.py  compute_env_platform.py  compute_env_response_dto_platform.py  config_env_variable.py  dataset.py  (+94 more)
tests/: __init__.py  conftest.py  test_compute_envs.py  test_tower_client.py
(+119 files in other folders)
