[project]
name = "nf-tower-sdk"
version = "0.0.1"
description = "Python SDK for Nextflow Tower API"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["Nextflow Tower", "Bioinformatics", "Nextflow"]
authors = [
  {name = "Ethasham Ahmed", email = "ethashamahmed@outlook.com"}
]
maintainers = [
  {name = "Ethasham Ahmed", email = "ethashamahmed@outlook.com"}
]
classifiers = [
  # How mature is this project? Common values are
  # 3 - Alpha
  # 4 - Beta
  # 5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Software Development",
]

dependencies = [
  "jsonschema>=4.16.0",
  "openapi-python-client>=0.13.4"
]

# dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.2.1"
]

[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 72
extend-exclude = '''
(
  .*/nft/*
)
'''

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
